# BMX-bookmark-extractor

./: .dockerignore  .env.example  .envrc  .envrc.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  Dockerfile  FIXES_APPLIED.md  PRD.md  README.md  TROUBLESHOOTING.md  bmx_env.yml  docker-compose.yml  employee.db  package.json  pdf2txtPLUS.py  ps.html  pyproject.toml  sample_schema.gql  schema.graphql  spacy_to_csv.py  tsconfig.json  uplog.txt
.devcontainer/: README.md  devcontainer.json  docker-compose.devcontainer.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
SQLite/: employee.py  sqlite_demo.py
app/: Dockerfile  app.py  main.py  requirements.txt
app/core/: config.py  logging.py
app/db/: init_db.py  neo4j_client.py  pinecone_client.py  schema.py
app/en_core_web_sm-3.1.0/: PKG-INFO
app/routers/: ingestion.py  query.py
app/services/: async_processor.py  entity_extraction.py  pdf_service.py  query_service.py  web_service.py  youtube_service.py
app/static/: script.js
app/templates/: index.html
backend/: .dockerignore  Dockerfile  Dockerfile.base  README.md  pyproject.toml  startup.sh
backend/src/: main.py
backend/src/cli/commands/: export_cmd.py
backend/src/exports/: anki_export.py  csv_export.py  text_export.py
bmx_bookmark_extractor/defaultsc/: choco.json  scrapy.cfg
bmx_bookmark_extractor/defaultsc/defaultsc/spiders/: coindeskspider.py
defaultsc/: cddata.json
defaultsc/defaultsc/: items.py  settings.py
defaultsc/defaultsc/spiders/: coindeskspider.py
demo/: db.sqlite3
demo/demo/: settings.py  urls.py
demo/myapp/: urls.py  views.py
demo/myapp/migrations/: 0001_initial.py
demo/myapp/templates/: base.html  todos.html
docs/: hybrid-database-architecture.md  implementation-plan.md  infrastructure.md  llm-integration.md  mvp-plan.md  pdf-processing.md  system-architecture-flow.md
documentation/: README.md  anki-integration.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vercel.json  vite.config.ts
frontend/.storybook/: main.ts  vitest.setup.ts
frontend/app/: .dockerignore  layout.tsx  page.tsx
frontend/app/api/export/: route.ts
frontend/components/: ExportOptions.tsx  FileUploader.tsx
frontend/src/: hooks.server.ts
frontend/src/app/: page.module.css  page.tsx
frontend/src/lib/server/db/: schema.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/api/health/: +server.ts
frontend/src/routes/health/: +page.server.ts  +page.svelte
frontend/src/stories/: Header.svelte
inputs/: Experiences.txt  LICENSE
prompts/: PRD.md
public/: index.html
rust_backend/: Cargo.toml
scrapy/tutorial/spiders/: quotes_spider.py
scripts/: dc_build  dc_build_log  dc_cargo  dc_exec  dc_lint  dc_lock  dc_poetry  dc_rust_build  dc_rust_init  dc_up  dcps  dcs_qv  dcs_recs  open_devcontainer  run_lint  scriptsReadMe.md
scripts-devcontainer/: README.md  dev  install  lint  shell  test
source_data/: Anthro (Psych_Soc_Econ_Health).txt  ArticleMetadata.db  CompSci (AIML_Web3_Math_Logic_Tech).txt  CompSci _ Math _ Logic.txt  Econ _ Anthro.txt  Health.txt  Links.xlsx  Psych _ Socio _ Econ _ Anthro _ Health.txt  Psych _ Socio.txt  README.md  anki_cards.csv  anki_importer.cypher  anki_to_csv_converter.py
src/defaultsc/defaultsc/: middlewares.py  pipelines.py
src/defaultsc/defaultsc/spiders/: cdspider.py
src/django/: README.md  build.sh  db.sqlite3  requirements.txt  vercel.json
src/django/contents/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/django/contents/migrations/: 0001_initial.py  0002_alter_webpage_url.py
src/django/contents/templates/: base.html  home.html  scrape.html  success.html  todos.html
src/django/demo/: settings.py  wsgi.py
src/django/demo/templates/: index.html
src/django/myapp/: models.py  urls.py
src/django/static/js/: app.js  app.js.map  simpler.js  simpler.js.map  simplest.js
src/django/static/ts/: simplest.tsx
src/django/static_root/js/: simplest.js.map
src/django/static_root/ts/: app.tsx  simpler.tsx
src/django/vercel_app/: settings.py  urls.py  wsgi.py
src/inputs/: ArticleMetadata.csv  CompSci _ Math _ Logic.txt  Health.txt  Links.xlsx  My Chinese.txt  Psych _ Socio.txt
src/utils/: processing_pipeline.py
vectorlearn/: config.ts  package.json  tsconfig.json  utils.ts
