[tool.poetry]
name = "bmx"
version = "0.1.0"
description = "A tool to extract and analyze bookmarked content"
authors = ["CooperR1 <cooperability@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
asyncpg = "^0.28.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
PyPDF2 = "^3.0.1"
spacy = "^3.7.2"
youtube-transcript-api = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
