[tool.poetry]
name = "bmx"
version = "0.1.0"
description = "A tool to extract and analyze bookmarked content"
authors = ["Cooper Reed <cooperability@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
asyncpg = "^0.28.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pypdf >= "3.9.0"
spacy = "^3.7.2"
youtube-transcript-api = "^0.6.1"
python-dotenv = "^1.0.0"
neo4j = "^5.10.0"
pinecone = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
