[tool.poetry]
name = "bmx"
version = "0.1.0"
description = "A tool to extract and analyze bookmarked content"
authors = ["Cooper Reed <cooperability@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
pydantic = "^2.9.1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pypdf = "4.3.1"
spacy = "^3.6.1"
youtube-transcript-api = "^0.6.2"
python-dotenv = "^1.0.1"
neo4j = "^5.24.0"
pinecone = { version = "^5.1.0", optional = true }
numpy = "^2.0.0"
wasabi = "1.1.3"
starlette = ">=0.40.0,<0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
