[tool.poetry]
name = "bmx-backend"
version = "0.1.0"
description = "Backend API for BMX"
authors = ["Your Name <you@example.com>"] # CHANGE THIS
# readme = "README.md" # Removed - Not needed inside container build
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0" # For async testing client
black = "^24.4.2"
ruff = "^0.5.5"
isort = "^5.13.2"
python-multipart = "^0.0.9" # Needed for StaticFiles/Form data

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 