[tool.poetry]
name = "bmx-backend"
version = "0.1.0"
description = "Backend API for BMX"
authors = ["Your Name <you@example.com>"] # CHANGE THIS
# readme = "README.md" # Removed - Not needed inside container build
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.7.1"
starlette = ">=0.49.1"
neo4j = ">=5.15.0,<7.0"
spacy = "^3.7.5"
nltk = ">=3.8.1"
scikit-learn = ">=1.3.2"
beautifulsoup4 = ">=4.12.2"
requests = ">=2.31.0"
lxml = ">=4.9.3"
textstat = ">=0.7.3"
yake = ">=0.4.8"
websockets = ">=12.0"
pandas = ">=2.1.4"
numpy = "^1.24.4"
psutil = ">=5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0" # For async testing client
black = "^24.4.2"
ruff = "^0.5.5"
isort = "^5.13.2"
python-multipart = "^0.0.20" # Needed for StaticFiles/Form data
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
